<?xml version="1.0"?>
<package format="3">
  <name>patrol</name>
  <version>0.0.1</version>
  <description>Patrol robot node</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>yoloinference</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
  <build_type>ament_python</build_type>
  </export>
</package>